--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -8,16 +8,16 @@ nav.navbar.navbar-expand-lg.bg-white.navbar-light.shadow.pt-2.pb-3.px-5.mb-0.sti
     ul.navbar-nav.ml-auto
       - if logged_in?
         li.nav-item.ml-1.ml-xl-3
-          = link_to "ホーム",   '#' ,class: "nav-link"
+          = link_to "ホーム",   '/' ,class: "nav-link"
         li.nav-item.ml-1.ml-xl-3
-          = link_to "投稿する",   '#' ,class: "nav-link"
+          = link_to "投稿する",   'reviews/new' ,class: "nav-link"
         li.nav-item.ml-1.ml-xl-3
-          = link_to "魚種一覧",   '#' ,class: "nav-link"
+          = link_to "魚種一覧",   '/fishes' ,class: "nav-link"
         li.nav-item.ml-1.ml-xl-3
-          = link_to "全投稿一覧",   '#' ,class: "nav-link"
-        li.nav-item.ml-1.ml-xl-3
-          = link_to "いいね一覧",   '#' ,class: "nav-link"
-        li.nav-item.dropdown.ml-1.ml-xl-3
+          = link_to "全投稿一覧",   '/reviews' ,class: "nav-link"
+        /li.nav-item.ml-1.ml-xl-3
+        /  = link_to "いいね一覧",   '#' ,class: "nav-link"
+        /li.nav-item.dropdown.ml-1.ml-xl-3
           a.nav-link.dropdown-toggle data-toggle="dropdown" href="#"
             ="検索"
           .dropdown-menu
@@ -29,11 +29,11 @@ nav.navbar.navbar-expand-lg.bg-white.navbar-light.shadow.pt-2.pb-3.px-5.mb-0.sti
           = link_to "ログアウト" , logout_path ,method: :delete ,class: "nav-link"
       - else
         li.nav-item.ml-1.ml-xl-3
-          = link_to "ホーム",   '#' ,class: "nav-link"
+          = link_to "ホーム",   '/' ,class: "nav-link"
         li.nav-item.ml-1.ml-xl-3
-          = link_to "検索",   '#' ,class: "nav-link"
+          = link_to "魚種一覧",   '/fishes' ,class: "nav-link"
         li.nav-item.ml-1.ml-xl-3
-          = link_to "魚種一覧",   '#' ,class: "nav-link"
+          = link_to "投稿する", login_path ,class: "nav-link"
         li.nav-item.ml-1.ml-xl-3
           = link_to "新規登録" , new_user_path ,class: "nav-link"
         li.nav-item.ml-1.ml-xl-3
