--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -15,7 +15,7 @@
           = f.email_field :email, class: 'form-control' 
         .form-group
           = f.label :prof , 'プロフィール'
-          = f.text_field :prof, class: 'form-control' 
+          = f.text_area :prof, class: 'form-control' 
         .form-group
           = f.label :picture , 'プロフィール写真'
           = f.file_field :picture, class: 'form-control'
