--- a/app/views/reviews/index.html.slim
+++ b/app/views/reviews/index.html.slim
@@ -20,9 +20,9 @@
   end
       
   - if @reviews.any?
-    .row.justify-content-around
+    .row
       - @reviews.each do |review|   
-          .review-partial.col-12.col-md-6.p-3
+          .review-partial.col-12.col-md-6.col-lg-4.p-3
             .review-partial__box.shadow
               == render "shared/index_review" , object: review
               .review-partial__time
