--- a/app/views/users/_unfollow.html.slim
+++ b/app/views/users/_unfollow.html.slim
@@ -1,2 +1,2 @@
 = form_with(model: current_user.active_relationships.find_by(followed_id: object.id),html: { method: :delete }) do |f| 
-  = f.submit "Unfollow", class: "btn btn-primary" 
+  = f.submit "Unfollow", class: "btn btn-primary btn-sm" 
