header パスワード再設定画面編集

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -10,11 +10,11 @@ nav.navbar.navbar-expand-lg.bg-white.navbar-light.shadow.pt-2.pb-3.px-5.mb-0.sti
         li.nav-item.ml-1.ml-xl-3
           = link_to "ホーム",   '/' ,class: "nav-link"
         li.nav-item.ml-1.ml-xl-3
-          = link_to "投稿する",   'reviews/new' ,class: "nav-link"
+          = link_to "投稿する",   new_review_path ,class: "nav-link"
         li.nav-item.ml-1.ml-xl-3
           = link_to "魚種一覧",   '/fishes' ,class: "nav-link"
         li.nav-item.ml-1.ml-xl-3
-          = link_to "全投稿一覧",   '/reviews' ,class: "nav-link"
+          = link_to "全ての投稿",   '/reviews' ,class: "nav-link"
         /li.nav-item.ml-1.ml-xl-3
         /  = link_to "いいね一覧",   '#' ,class: "nav-link"
         /li.nav-item.dropdown.ml-1.ml-xl-3
