--- a/app/views/password_resets/edit.html.slim
+++ b/app/views/password_resets/edit.html.slim
@@ -1,17 +1,15 @@
-h1 Reset password    
-
- div.row
-  div.col-md-6.col-md-offset-3
+h1 パスワード再設定
+ .row
+  .col-md-6.offset-md-3
     = form_with scope: :password_reset, url: password_resets_path(params[:id]) ,local: true do |f|   
-      = render 'shared/error_messages', object: f.object 
-
+      == render 'shared/error_messages', object: f.object 
       = hidden_field_tag :email, @user.email 
-
-      = f.label :password ,"パスワード"
-      = f.password_field :password, class: 'form-control' 
-
-      = f.label :password_confirmation, "パスワード（確認）" 
-      = f.password_field :password_confirmation, class: 'form-control' 
-
-      = f.submit "Update password", class: "btn btn-primary" 
+      .form-group 
+        = f.label :password ,"パスワード"
+        = f.password_field :password, class: 'form-control' 
+      .form-group 
+        = f.label :password_confirmation, "パスワード（確認）" 
+        = f.password_field :password_confirmation, class: 'form-control' 
+      .text-center
+        = f.submit "Update password", class: "btn btn-primary" 
   
