--- a/app/views/password_resets/new.html.slim
+++ b/app/views/password_resets/new.html.slim
@@ -1,10 +1,9 @@
-h1 Forgot password
-
-div.row
-  div.col-md-6.col-md-offset-3
-    = form_with scope: :password_reset, url: password_resets_path ,local: true do |f|    
-
-      = f.label :email , "メールアドレス"
-      = f.email_field :email, class: "form-control" 
-
-      = f.submit "送信", class: "btn btn-primary" 
+h1 パスワード再設定
+.row
+  .col-md-6.offset-md-3
+    = form_with scope: :password_reset, url: password_resets_path ,local: true do |f|
+      .form-group
+        = f.label :email , "メールアドレス"
+        = f.email_field :email, class: "form-control" 
+      .text-center
+        = f.submit "送信", class: "btn btn-primary" 
