--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,5 +1,5 @@
 .container.user_edit
-  h1.mt-5.mb-3.text-center User edit
+  h1.mt-5.mb-3.text-center プロフィール編集
   div.row
     div.col-md-6.offset-md-3
       = form_with model:@user, local:true do |f| 
