--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,41 +1,41 @@
 
-headr
-nav.navbar.navbar-expand-lg.bg-white.navbar-light.shadow.pt-2.pb-3.px-5.mb-0.sticky-top
-  a.navbar-brand href="/" Fish-Review
-  button.navbar-toggler data-toggle="collapse" data-target="#navbarcontent"
-    span.navbar-toggler-icon
-  #navbarcontent.collapse.navbar-collapse
-    ul.navbar-nav.ml-auto
-      - if logged_in?
-        li.nav-item.ml-1.ml-xl-3
-          = link_to "ホーム",   '/' ,class: "nav-link"
-        li.nav-item.ml-1.ml-xl-3
-          = link_to "投稿する",   new_review_path ,class: "nav-link"
-        li.nav-item.ml-1.ml-xl-3
-          = link_to "魚種一覧",   '/fishes' ,class: "nav-link"
-        li.nav-item.ml-1.ml-xl-3
-          = link_to "全ての投稿",   '/reviews' ,class: "nav-link"
-        /li.nav-item.ml-1.ml-xl-3
-        /  = link_to "いいね一覧",   '#' ,class: "nav-link"
-        /li.nav-item.dropdown.ml-1.ml-xl-3
-          a.nav-link.dropdown-toggle data-toggle="dropdown" href="#"
-            ="検索"
-          .dropdown-menu
-            = link_to "ユーザー検索",   '#' ,class: "dropdown-item"
-            = link_to "投稿検索",   '#' ,class: "dropdown-item"
-        li.nav-item.ml-1.ml-xl-3
-          = link_to "プロフィール編集" , edit_user_path(current_user),class: "nav-link"
-        li.nav-item.ml-1.ml-xl-3
-          = link_to "ログアウト" , logout_path ,method: :delete ,class: "nav-link"
-      - else
-        li.nav-item.ml-1.ml-xl-3
-          = link_to "ホーム",   '/' ,class: "nav-link"
-        li.nav-item.ml-1.ml-xl-3
-          = link_to "魚種一覧",   '/fishes' ,class: "nav-link"
-        li.nav-item.ml-1.ml-xl-3
-          = link_to "投稿する", login_path ,class: "nav-link"
-        li.nav-item.ml-1.ml-xl-3
-          = link_to "新規登録" , new_user_path ,class: "nav-link"
-        li.nav-item.ml-1.ml-xl-3
-          = link_to "ログイン" , login_path ,class: "nav-link"
-          
+header
+  nav.navbar.navbar-expand-lg.bg-white.navbar-light.shadow.pt-2.pb-3.px-5.mb-0.sticky-top
+    a.navbar-brand.header__logo href="/" Fish-Review
+    button.navbar-toggler data-toggle="collapse" data-target="#navbarcontent"
+      span.navbar-toggler-icon
+    #navbarcontent.collapse.navbar-collapse
+      ul.navbar-nav.ml-auto
+        - if logged_in?
+          li.nav-item.ml-1.ml-xl-3
+            = link_to "ホーム",   '/' ,class: "nav-link"
+          li.nav-item.ml-1.ml-xl-3
+            = link_to "投稿する",   new_review_path ,class: "nav-link"
+          li.nav-item.ml-1.ml-xl-3
+            = link_to "魚種一覧",   '/fishes' ,class: "nav-link"
+          li.nav-item.ml-1.ml-xl-3
+            = link_to "全ての投稿",   '/reviews' ,class: "nav-link"
+          /li.nav-item.ml-1.ml-xl-3
+          /  = link_to "いいね一覧",   '#' ,class: "nav-link"
+          /li.nav-item.dropdown.ml-1.ml-xl-3
+            a.nav-link.dropdown-toggle data-toggle="dropdown" href="#"
+              ="検索"
+            .dropdown-menu
+              = link_to "ユーザー検索",   '#' ,class: "dropdown-item"
+              = link_to "投稿検索",   '#' ,class: "dropdown-item"
+          li.nav-item.ml-1.ml-xl-3
+            = link_to "プロフィール編集" , edit_user_path(current_user),class: "nav-link"
+          li.nav-item.ml-1.ml-xl-3
+            = link_to "ログアウト" , logout_path ,method: :delete ,class: "nav-link"
+        - else
+          li.nav-item.ml-1.ml-xl-3
+            = link_to "ホーム",   '/' ,class: "nav-link"
+          li.nav-item.ml-1.ml-xl-3
+            = link_to "魚種一覧",   '/fishes' ,class: "nav-link"
+          li.nav-item.ml-1.ml-xl-3
+            = link_to "投稿する", login_path ,class: "nav-link"
+          li.nav-item.ml-1.ml-xl-3
+            = link_to "新規登録" , new_user_path ,class: "nav-link"
+          li.nav-item.ml-1.ml-xl-3
+            = link_to "ログイン" , login_path ,class: "nav-link"
+            
