--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,5 +1,5 @@
 .row.justify-content-center
-  .col-12.col-md-6.col-lg-6
+  .col-12.col-md-8.col-lg-8
     .user__prof.row.p-3.m-3.rounded
       .col-6.col-sm-3.px-2
         
@@ -19,8 +19,9 @@
       .user__prof-prof-wrap.col-12.col-sm-6.px-2
         .user__prof-prof.mb-3
           = @user.prof
-        .user__prof-edit
-          = link_to "編集" , edit_user_path 
+        - if review_correct_user
+          .user__prof-edit
+            = link_to "編集" , edit_user_path(current_user)
 
 - if @reviews.any?
     .row
