--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -98,3 +98,19 @@
 .review-partial__review-item-star{
   -webkit-text-stroke: 1px #000;
 }
+
+.review-partial__user-name{
+  font-size: 8px;
+  @media (min-width: 576px) {
+     font-size: 12px;
+  }
+  @media (min-width: 768px) {
+     font-size: 11px;
+  }
+  @media (min-width: 992px) {
+    font-size: 11px;
+  }
+  @media (min-width: 1200px) {
+    font-size: 13px;
+  }
+}
