--- a/app/views/reviews/show.html.slim
+++ b/app/views/reviews/show.html.slim
@@ -1,3 +1,7 @@
-.container
-  .card-columns
-    == render "shared/review" , object: @review
+.row
+  .review-partial.col-12.col-md-6.col-lg-4.p-3
+              .review-partial__box.shadow
+                == render "shared/index_review" , object: @review
+                .review-partial__time
+                  = time_ago_in_words(@review.created_at) 
+                  |前
