--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -1,7 +1,7 @@
 - if logged_in?
   .row.justify-content-center
-    .col-12.col-md-6.col-lg-6
-      .user__prof.row.p-3.m-3
+    .col-12.col-md-8.col-lg-8
+      .row.user__prof.p-3.m-3
         .col-6.col-sm-3.px-2
           - if current_user.avatar.attached?
             = image_tag current_user.avatar.variant(combine_options:{resize:"50x50^",crop:"50x50+0+0",gravity: :center}).processed,class: "mx-auto d-block img-fluid user_image" 
@@ -15,7 +15,7 @@
               == render "shared/profile"
             /.user__prof-follow-form
             /  == render "follow_form" , object: @user if logged_in? 
-        .user__prof-prof-wrap.px-2
+        .col-12.col-sm-6.user__prof-prof-wrap.px-2
           .user__prof-prof.mb-3
             = current_user.prof
           .user__prof-edit
