--- a/app/views/reviews/show.html.slim
+++ b/app/views/reviews/show.html.slim
@@ -1,7 +1,12 @@
-.row
-  .review-partial.col-12.col-md-6.col-lg-4.p-3
-              .review-partial__box.shadow
-                == render "shared/index_review" , object: @review
-                .review-partial__time
-                  = time_ago_in_words(@review.created_at) 
-                  |前
+.row.justify-content-center.pt-5
+  .review-partial.col-12.col-md-8.col-lg-7.p-3
+    .review-partial__box.shadow
+      == render "shared/index_review" , object: @review
+      .review-partial-show__time
+        = time_ago_in_words(@review.created_at) 
+        |前
+      .review-partial__edit.mt-5.mb-2
+        p.review-partial__edit-edit.ml-3
+          = link_to "編集" , edit_review_path(@review)
+        p.review-partial__edit-delete.mr-3
+          = link_to "削除" , review_path , method: :delete , data: { confirm: "この投稿を削除しますか?" }
