--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -8,7 +8,7 @@ header
       ul.navbar-nav.ml-auto
         - if logged_in?
           li.nav-item.ml-1.ml-xl-3
-            = link_to "ホーム",   '/' ,class: "nav-link"
+            = link_to "タイムライン",   '/' ,class: "nav-link"
           li.nav-item.ml-1.ml-xl-3
             = link_to "投稿する",   new_review_path ,class: "nav-link"
           li.nav-item.ml-1.ml-xl-3
