--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -11,23 +11,23 @@
 .show_follow
   - if @users.present?
     - @users.each do |user| 
-      div.container
-        div.row.border.rounded-lg.follow_user.mb-4.shadow
-          div.col-sm-2.col-4
+      .container
+        .row.border.rounded-lg.follow_user.mb-4.shadow.user-index__row
+          .col-sm-2.col-4
             - if user.avatar.attached?
               = image_tag user.avatar.variant(combine_options:{resize:"50x50^",crop:"50x50+0+0",gravity: :center}).processed,class: "mx-auto d-block img-fluid user_image" 
             -else
               = image_tag "noimage.png" ,class: "mx-auto d-block img-fluid user_image" 
-          div.col-sm-2.col-8.nameinfo
+          .col-sm-2.col-8.nameinfo
             p
               = user.name 
             p
               = user.account_name
-          div.col-sm-6.col-12.text-left.overflow-auto.border
+          .col-sm-6.col-12.text-left.overflow-auto.border
             p.prof
               = user.prof
 
-          div#follow_form.col-sm-2.col-3.text-center
+          #follow_form.col-sm-2.col-3.text-center
             - if current_user.following?(user) 
               = form_with(model: current_user.active_relationships.find_by(followed_id: user.id),html: { method: :delete }) do |f| 
                 = f.submit "Unfollow", class: "btn btn-primary" 
@@ -35,3 +35,6 @@
               = form_with(model: current_user.active_relationships.build) do |f| 
                 = hidden_field_tag :followed_id, user.id 
                 = f.submit "Follow", class: "btn btn-primary" 
+          - if current_user.admin? && !current_user?(user)
+            .col-12.text-right
+              = link_to "削除", user, method: :delete, data: { confirm: "ユーザーを削除しますか?" }, class: "text-right"
