headerハンバーガーメニューの色変更

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,8 +1,11 @@
 
 header
   nav.nav-body.navbar.navbar-expand-lg.shadow.pt-2.pb-3.px-5.mb-0.sticky-top
-    a.navbar-brand.header__logo href="/" Fish-Review
-    button.navbar-toggler data-toggle="collapse" data-target="#navbarcontent"
+    .navbar__logo-block
+      a.navbar-brand.header__logo href="/" Fish-Review
+      br
+      span.header__sub-title aaa
+    button.navbar-toggler.custom-hamburger.p-1 data-toggle="collapse" data-target="#navbarcontent"
       span.navbar-toggler-icon
     #navbarcontent.collapse.navbar-collapse
       ul.navbar-nav.ml-auto
