--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,6 +64,7 @@ header{
   font-weight: 900;
   font-size: 2rem;
   color: #FF5F17;
+  line-height: 1em;
 }
 
  h1{
@@ -152,4 +153,16 @@ header{
   a{
   color: white !important;
   }
+}
+
+.header__sub-title{
+  color: #FFFFEE;
+}
+
+.navbar__logo-block{
+  margin-bottom: -0.2rem;
+}
+
+.custom-hamburger{
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
