--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,10 +1,10 @@
 
 header
   nav.nav-body.navbar.navbar-expand-lg.shadow.pt-2.pb-3.px-5.mb-0.sticky-top
-    .navbar__logo-block
-      a.navbar-brand.header__logo href="/" Fish-Review
+    .navbar__logo-block.text-center
+      a.navbar-brand.header__logo.pb-2 href="/" Fish-Review
       br
-      span.header__sub-title aaa
+      span.header__sub-title 魚の食味投稿サービス　魚を知ろう、味わおう！
     button.navbar-toggler.custom-hamburger.p-1 data-toggle="collapse" data-target="#navbarcontent"
       span.navbar-toggler-icon
     #navbarcontent.collapse.navbar-collapse
