--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,3 +1,4 @@
+- provide :title, "#{@user.name}#{@user.account_name}"
 .row.justify-content-center
   .col-12.col-md-8.col-lg-8
     .user__prof.row.p-3.m-3.rounded
