--- a/app/views/reviews/show.html.slim
+++ b/app/views/reviews/show.html.slim
@@ -1,3 +1,4 @@
+- provide :title, @review.fish.name
 .row.justify-content-center.pt-5
   .review-partial.col-12.col-md-8.col-lg-7.p-3
     .review-partial__box.shadow
