コメント機能、フォロー機能バグ修正

--- a/app/views/relationships/destroy.js.erb
+++ b/app/views/relationships/destroy.js.erb
@@ -1,2 +1,2 @@
-$("#follow_form").html("<%= j(render'users/follow' , object: @user) %>");
+$("#follow_form_<%= @user.id %>").html("<%= j(render'users/follow' , object: @user) %>");
 $("#followers").html('<%= @user.followers.count %>');  
