--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,2 +1,2 @@
-$("#comments_area").html("<%= j(render 'index', { comments: @comment.review.comments }) %>");
+$("#comments_area").html("<%= j(render 'index', comments: @review.comments) %>");
 $("#textarea").val('');
