--- a/app/views/relationships/create.js.erb
+++ b/app/views/relationships/create.js.erb
@@ -1,2 +1,2 @@
-$("#follow_form").html("<%= j(render 'users/unfollow', object: @user) %>");
+$("#follow_form_<%= @user.id %>").html("<%= j(render 'users/unfollow', object: @user) %>");
 $("#followers").html('<%= @user.followers.count %>'); 
