--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -28,14 +28,16 @@
             p.prof
               = user.prof
 
-          #follow_form.col-sm-2.col-3.text-center
-            - if current_user.following?(user) 
-              = form_with(model: current_user.active_relationships.find_by(followed_id: user.id),html: { method: :delete }) do |f| 
-                = f.submit "Unfollow", class: "btn btn-primary" 
-            - else
-              = form_with(model: current_user.active_relationships.build) do |f| 
-                = hidden_field_tag :followed_id, user.id 
-                = f.submit "Follow", class: "btn btn-primary" 
+          .user__prof-follow-form
+            == render "follow_form" , object: user if logged_in?
+              //  #follow_form.col-sm-2.col-3.text-center
+                  - if current_user.following?(user) 
+                    = form_with(model: current_user.active_relationships.find_by(followed_id: user.id),html: { method: :delete }) do |f| 
+                      = f.submit "Unfollow", class: "btn btn-primary" 
+                  - else
+                    = form_with(model: current_user.active_relationships.build) do |f| 
+                      = hidden_field_tag :followed_id, user.id 
+                      = f.submit "Follow", class: "btn btn-primary" 
           - if current_user.admin? && !current_user?(user)
             .col-12.text-right
               = link_to "削除", user, method: :delete, data: { confirm: "ユーザーを削除しますか?" }, class: "text-right"
