タイトルの文字を太くした

--- a/app/views/password_resets/edit.html.slim
+++ b/app/views/password_resets/edit.html.slim
@@ -1,5 +1,5 @@
 - provide :title, "パスワード入力"
-h1 パスワード再設定
+h1.font-weight-bold パスワード再設定
  .row
   .col-md-6.offset-md-3
     = form_with scope: :password_reset, url: password_resets_path(params[:id]) ,local: true do |f|   
