--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,5 +1,5 @@
 - provide :title, "新規登録"
-h1.mt-5.mb-3.text-center 新規登録
+h1.mt-5.mb-3.text-center.font-weight-bold 新規登録
 .row
   .col-md-6.offset-md-3
     = form_with model: @user, local: true do |f|
