--- a/app/views/fishes/index.html.slim
+++ b/app/views/fishes/index.html.slim
@@ -1,6 +1,6 @@
 - provide :title, "魚種一覧"
 container
-  h1.mt-5.mb-5.text-center 魚種一覧
+  h1.mt-5.mb-5.text-center.font-weight-bold 魚種一覧
   .row
     .col-12.text-center.mb-3
       = search_form_for(@q, url:fishes_path) do |f|
