--- a/app/views/reviews/edit.html.slim
+++ b/app/views/reviews/edit.html.slim
@@ -1,6 +1,6 @@
 - provide :title, "投稿編集"
 .review
-  h1 投稿編集画面
+  h1.font-weight-bold 投稿編集画面
   .row
     .col-md-6.offset-md-3
       = form_with model: @review, local: true do |f|
