--- a/app/views/reviews/index.html.slim
+++ b/app/views/reviews/index.html.slim
@@ -1,5 +1,5 @@
 - provide :title, "投稿一覧"
-h1.mt-5.mb-3.text-center 投稿一覧
+h1.mt-5.mb-3.text-center.font-weight-bold 投稿一覧
 = search_form_for(@q, url:reviews_path) do |f|
   .review__index-search.d-sm-flex.justify-content-around.mx-sm-3.mb-5.border-bottom.px-4.py-4.bg-gray
     .review__index-search-item
