--- a/app/views/reviews/new.html.slim
+++ b/app/views/reviews/new.html.slim
@@ -1,6 +1,6 @@
 - provide :title, "新規投稿"
 .review  
-  h1 投稿画面
+  h1.font-weight-bold 投稿画面
   .row
     .col-md-6.offset-md-3
       = form_with model: @review, local: true do |f|
