--- a/app/views/users/show_follow2.html.slim
+++ b/app/views/users/show_follow2.html.slim
@@ -17,12 +17,12 @@
           .col-sm-6.col-12.text-left.overflow-auto.border
             p.prof
               = user.prof
-
-          #follow_form.col-sm-2.col-3.text-center
-            - if current_user.following?(user) 
-              = form_with(model: current_user.active_relationships.find_by(followed_id: user.id),html: { method: :delete }) do |f| 
-                = f.submit "Unfollow", class: "btn btn-primary" 
-            - else
-              = form_with(model: current_user.active_relationships.build) do |f| 
-                = hidden_field_tag :followed_id, user.id 
-                = f.submit "Follow", class: "btn btn-primary" 
+          - unless current_user == user
+            #follow_form.col-sm-2.col-3.text-center
+              - if current_user.following?(user) 
+                = form_with(model: current_user.active_relationships.find_by(followed_id: user.id),html: { method: :delete }) do |f| 
+                  = f.submit "Unfollow", class: "btn btn-primary" 
+              - else
+                = form_with(model: current_user.active_relationships.build) do |f| 
+                  = hidden_field_tag :followed_id, user.id 
+                  = f.submit "Follow", class: "btn btn-primary" 
