--- a/app/views/users/show_follow2.html.slim
+++ b/app/views/users/show_follow2.html.slim
@@ -18,7 +18,7 @@
             p.prof
               = user.prof
           - unless current_user == user
-            #follow_form.col-sm-2.col-3.text-center
+            .col-sm-2.col-3.text-center id="follow_form_#{user.id}"
               - if current_user.following?(user) 
                 = form_with(model: current_user.active_relationships.find_by(followed_id: user.id),html: { method: :delete }) do |f| 
                   = f.submit "Unfollow", class: "btn btn-primary" 
